exports[`CircleImageWithCategory render CircleImageWithCategory 1`] = `
<View
  style={
    Object {
      "height": 100,
      "width": 100,
    }
  }>
  <View
    style={
      Object {
        "height": 100,
        "width": 100,
      }
    }>
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "borderRadius": 50,
          "height": 100,
          "left": -0,
          "position": "absolute",
          "top": -0,
          "width": 100,
        }
      } />
    <Image
      categorySource={
        Object {
          "uri": "x.jpg",
        }
      }
      size={100}
      source={
        Object {
          "uri": "x.jpg",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 50,
            "height": 100,
            "width": 100,
          },
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
            },
          ],
        ]
      } />
    <View
      style={
        Object {
          "height": 100,
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 100,
        }
      } />
  </View>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 3.125,
          "height": 25,
          "position": "absolute",
          "right": 3.125,
          "width": 25,
        },
        undefined,
      ]
    } />
</View>
`;

exports[`ModalSpinner render invisible 1`] = `
<Modal
  transparent={true}
  visible={false}>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 0.6)",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="large"
      style={
        Array [
          Object {
            "height": 80,
          },
        ]
      } />
  </View>
</Modal>
`;

exports[`ModalSpinner render visible 1`] = `
<Modal
  transparent={true}
  visible={true}>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 0.6)",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="large"
      style={
        Array [
          Object {
            "height": 80,
          },
        ]
      } />
  </View>
</Modal>
`;
